Fixed All issues

--- a/static/css/complaint_list.css
+++ b/static/css/complaint_list.css
@@ -1,6 +1,7 @@
-table{
-  border: 3px pink ;
+#list{
+  border: 3px solid pink;
 }
 body{
-  background-color: blue;
+  background-color: green;
+  opacity: 10%;
 }
