--- a/templates/complaint_detail.html
+++ b/templates/complaint_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}Complaint Detail{% endblock %}
 
 {% block body_block %}
