--- a/templates/student_register.html
+++ b/templates/student_register.html
@@ -8,6 +8,14 @@
     <div class="jumbotron">
       {% if registered %}
         <h1>Thank you for registering!</h1>
+      {% elif response %}
+      <h3>This Registeration Number Already exists. Try another one</h3>
+      <form enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        {{ profile_form.as_p }}
+        <input class="btn btn-success" type="submit" name="" value="Register">
+      </form>
       {% else %}
         <h1>Register Here</h1>
         <h3>Just fill out the form.</h3>
